test/golden/{hello:_s}.golden

INITIALPATH:7:22: error:
    • INITIALPATH:7:30:
  |
7 | main = putStrLn [fmt|{hello:_s}|]
  |                              ^
String type is incompatible with grouping (_ or ,).

    • In the quasi-quotation: [fmt|{hello:_s}|]
  |
7 | main = putStrLn [fmt|{hello:_s}|]
  |                      ^^^^^^^^^^^^
